--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "esp-collector",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "ejs": "^3.1.10",
-    "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "express": "^4.22.1",
+    "http-errors": "~1.6.3",
+    "lowdb": "^1.0.0",
+    "dotenv": "^16.0.0",
+    "morgan": "^1.10.1"
   }
 }
