tidy up charts and sample rate

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ ESP_URL=http://192.168.1.195/
 
 # Optional: path to a DB file if you change persistence (not used by default lowdb)
 # DB_PATH=./data/readings.db
+
+# Sample rate in seconds for fetching data from ESP device
+SAMPLE_RATE=60
