--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ ESP_URL=http://192.168.1.195/
 
 # Sample rate in seconds for fetching data from ESP device
 SAMPLE_RATE=60
+
+# Google Service Account JSON file for Sheets API
+SERVICE_ACCOUNT_ACCOUNT_FILE=service-account.json
+# Google Sheets ID from sheet URL
+SPREADSHEET_ID=sheet-id-here
+
