--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.10",
     "express": "^4.22.1",
+    "googleapis": "^169.0.0",
     "http-errors": "~1.6.3",
     "lowdb": "^1.0.0",
-    "dotenv": "^16.0.0",
     "morgan": "^1.10.1"
   }
 }
