add to sheets working

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,14 @@ vite.config.ts.timestamp-*
 data/csv/*.csv
 data/csv/*.xlsx
 client_secret_*.apps.googleusercontent.com.json
+esp-collector-d1a8d0af1c30.json
+data/readings - Copy.json
+data/readings.json
+data/csv/*.csv
+data/csv/2025-12-07.csv
+data/readings.json
+data/csv/2025-12-07 - Copy.csv
+data/csv/2025-12-07.csv
+data/readings.json
+data/csv/2025-12-07 - Copy.csv
+data/csv/2025-12-07.csv
